--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -1,3 +1,6 @@
 {
-	"SUCCESS":"تغییرات با موفقیت ذخیره شد"
+	"SUCCESS":"تغییرات با موفقیت ذخیره شد",
+	"rank_1":"نفر اول",
+	"rank_2":"نفر دوم",
+	"rank_3":"نفر سوم"
 }
