--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -1,5 +1,6 @@
 {
 	"SUCCESS":"تغییرات با موفقیت ذخیره شد",
+	"RESEND_SMS":"پیامک مورد نظر مجددا در صف ارسال قرار گرفت و به زودی ارسال خواهد شد.",
 	"rank_1":"نفر اول",
 	"rank_2":"نفر دوم",
 	"rank_3":"نفر سوم"
